--- a/growvia-tracking/packages/sdk/tsconfig.json
+++ b/growvia-tracking/packages/sdk/tsconfig.json
@@ -2,10 +2,11 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src",
     "lib": ["ES2022", "DOM"],
     "target": "ES2020",
-    "module": "ESNext"
+    "module": "ESNext",
+    "verbatimModuleSyntax": false,
+    "isolatedModules": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
