--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon --watch server --ext ts --exec tsx server/index.ts",
     "build": "tsc",
     "start": "NODE_ENV=production node dist/index.js",
-    "check": "tsc"
+    "check": "tsc",
+    "seed": "tsx server/scripts/seedData.ts"
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.10.4",
